--- a/level1-D/lesson-20/main.css
+++ b/level1-D/lesson-20/main.css
@@ -154,6 +154,12 @@ body {
 .html-lesson-wrapper .see-content .col p {
   -webkit-margin-after: 0;
           margin-block-end: 0;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+}
+
+.html-lesson-wrapper .see-content .col:not(:first-child) .text:not(:last-child) {
+  margin-bottom: 1.5em;
 }
 
 .html-lesson-wrapper .try-content ul {
